WIK-DPS-TP05/api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test4
  labels:
    name: api-service

spec:
  selector:
    name: api

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
