WIK-DPS-TP05/api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test5

spec:
  rules:
    - host: { { .Values.domainname } }
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test4
                port:
                  number: 8080
